fix: Tweaked letter-spacing on landing page to match Figma design file.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -15,6 +15,7 @@ footer span {
 
 footer li {
 	text-transform: uppercase;
+	letter-spacing: var(--letter_spacing_spread);
 }
 
 /* #region MEDIA QUERIES */
