--- a/src/scss/pages/_sample-landing-page.scss
+++ b/src/scss/pages/_sample-landing-page.scss
@@ -18,6 +18,7 @@
   font-family: "Avenir Substitute", sans-serif;
   font-weight: 600;
   font-size: 72px;
+  letter-spacing: var(--letter_spacing_tighten);
   color: var(--white);
 }
 
@@ -47,6 +48,7 @@ text-shadow: var(--text_shadow);
   margin-bottom: var(--sign_up_for_free_margin_bottom);
   font-family: "Avenir Substitute", sans-serif;
   font-size: 16px;
+  letter-spacing: var(--letter_spacing_spread);
   text-transform: uppercase;
   text-shadow: var(--text_shadow);
   animation: fadein;
